--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "comfyui-tool-2lab"
 description = "A toolkit that can conveniently publish comfyUI workflows as web applications"
-version = "1.0.1"
+version = "1.0.2"
 license = "LICENSE"
-dependencies = ["qrcode", "Pillow", "numpy", "torch"]
+dependencies = ["qrcode", "Pillow", "numpy", "torch", "requests", "tqdm"]
 
 [project.urls]
 Repository = "https://github.com/AI2lab/comfyUI-tool-2lab"
