chore(licence-update): Update PyProject Toml - License

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "comfyui-tool-2lab"
 description = "A toolkit that can conveniently publish comfyUI workflows as web applications"
 version = "1.0.5"
-license = "LICENSE"
+license = { file = "LICENSE" }
 dependencies = ["qrcode", "Pillow", "numpy", "torch","requests","tqdm"]
 
 [project.urls]
