--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
 name = "comfyui-tool-2lab"
 description = "A toolkit that can conveniently publish comfyUI workflows as web applications"
-version = "1.2.0"
-license = { file = "LICENSE" }
+version = "1.2.1"
+license = "LICENSE"
 dependencies = ["qrcode", "Pillow", "numpy", "torch","requests","tqdm"]
 
 [project.urls]
