--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "comfyui-tool-2lab"
-description = "A toolkit that can conveniently publish comfyUI workflows as web applications"
-version = "1.3.3"
+description = "toolkits"
+version = "1.4.0"
 license = "LICENSE"
-dependencies = ["qrcode", "Pillow", "numpy", "torch","requests","tqdm"]
+dependencies = ["Pillow", "numpy", "torch","requests"]
 
 [project.urls]
 Repository = "https://github.com/AI2lab/comfyUI-tool-2lab"
